tests-integration/tests/roundtrip/invalid/semantic_errors/identifier_not_domain/identifier_not_domain.essence
letting dom be 5
find x : dom
